# DataML

./: README.md  tfjs.tar.xz
src/: AddDenoiseAutoEncoder.py  Augment_DAE.py  ConverParamLabels.py  ConvertLabel.py  ConvertNormLabels.py  ConvertParamLabels.py  CorrAnalysis.py  DataML.c  DataML.py  DataML_Backend.py  DataML_BatchMaker.py  DataML_DAE.py  DataML_DF.py  DataML_DT.py  DataML_KDE.py  DataML_Maker.py  DataML_VAE.py  GetClasses.py  MasterDataMaker.py  libDataML.c  libDataML.py  pyproject.toml  setup-gpu.py  setup-tflite.py  setup.py
src/scripts/: RemoveMLabelPar.sh  add_line_to_ini.sh  change_color-2-additives.sh  change_epoch.sh  change_lossMetric_MAE.sh  change_min_loss.sh  change_parameter.sh  change_version.sh  disable_colors.sh  enable_colors.sh  flatten_dae_ml.sh  make_dae.sh  makeca.sh  makeml.sh  process_ml_for_web.sh  skipEmptyColumns_False.sh
src/scripts/optimize-reduce-clean/: cleanmodel.sh  optmodel.sh  optmodel2.sh  redmodel.sh
src/utilities/: AddDenoiseAutoEncoder.py  AddFitData.py  AddNoisyData.py  AddNoisyDataCSV.py  AddPerfSheetsCorrAnalResults.py  AddSinglePerfCorrAnalMaster.py  CheckDataSet.py  ConvertLabel.py  ConvertToTFJS.py  ConvertToTFLite.py  CopyOutliers.py  CorrAnalysis.py  CorrAnalysis_Kyo.py  CreateMasterDatasetExcel.py  CreateMix4CorrAnalysis.py  CreateSubsetExcel.py  Fit_3D_plane.py  Fit_Plot_3D_plane.py  InterpXRange.py  MasterDataMaker.py  MergeTrainTestDatasets.py  Multi2SingleLine.py  NormalizeColumns.py  PlotLearnData.py  RandomCrossValidMaker.py  RemoveColumn.py  RemoveReductionTags.sh  RemoveSpurious.py  ShuffleData.py  SpectraMax.py  SplitColumnCodesExcel.py  SplitPerfFromCorrAnal.py  SplitXRange.py  TransposeData.py  ValidFileMaker.py  clean_folder.sh
web/: DataML_DF_web.py  (+4 more)
(+250 files in other folders)
