[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
include = [
  "*.py"
]

[project]
name = "DataML"
version = "v2025.2.28.2"
dependencies = [
    "numpy",
    "h5py",
    "tensorflow",
    "pydot",
    "graphviz",
    "scipy",
    "tf-keras",
    "scikeras",
    "scikit-learn"]
authors = [{ name="Nicola Ferralis", email="ferralis@mit.edu" },]
description = "Multilabel machine learning for combined experimental data"
readme = "../README.md"
requires-python = ">=3.9"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: GNU General Public License v2 (GPLv2)",
    "Operating System :: OS Independent",
    "Development Status :: 5 - Production/Stable",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Intended Audience :: Science/Research",
    "Topic :: Scientific/Engineering :: Chemistry",
    "Topic :: Scientific/Engineering :: Physics",
]

[project.scripts]
DataML = "DataML:DataML"
DataML_DF = "DataML_DF:DataML_DF"
ConvertLabel = "ConvertLabel:ConvertLabel"
GetClasses = "GetClasses:GetClasses"
AddDenoiseAutoEncoder = "AddDenoiseAutoEncoder:AddDenoiseAutoEncoder"
CorrAnalysis = "CorrAnalysis:CorrAnalysis"
DataML_Maker = "DataML_Maker:DataML_Maker"

[project.urls]
Homepage = "https://github.com/feranick/DataML"
Issues = "https://github.com/feranick/DataML/issues"
